--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "description": "A slack bot destiny Destiny.",
   "dependencies": {
     "coffee-script": "^1.10.0",
-    "dotenv": "^2.0.0",
+    "dotenv": "^1.2.0",
     "hubot": "^2.18.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
-    "hubot-help": "^0.2.0",
+    "hubot-help": "^0.1.3",
     "hubot-heroku-keepalive": "^1.0.2",
     "hubot-maps": "0.0.2",
     "hubot-pugme": "^0.1.0",
@@ -19,7 +19,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^4.2.2",
+    "hubot-slack": "^3.4.2",
     "promise.coffee": "^1.0.6",
     "q": "^1.4.1",
     "request": "^2.64.0"
@@ -28,6 +28,6 @@
     "jshint": "*"
   },
   "engines": {
-    "node": "latest"
+    "node": "0.10.x"
   }
 }
